fix footer menu on mobile

--- a/wp-content/themes/crossfit-cambridge/src/scss/incudes/_footer-menu.scss
+++ b/wp-content/themes/crossfit-cambridge/src/scss/incudes/_footer-menu.scss
@@ -38,7 +38,11 @@
 
   .footer-menu--items {
     background-color: black;
-    padding: 2rem 2rem;
+    padding: $spacer*2;
+
+    @media (max-width: 992px) {
+      padding: $spacer;
+    }
 
     .footer--list {
       font-family: 'Play', sans-serif;
@@ -50,10 +54,19 @@
         padding: 0;
         margin-bottom: 2rem;
 
+        @media (max-width: 992px) {
+          margin-bottom: 1rem;
+        }
+
         li {
           &:first-child {
             font-size: 30px;
             margin-bottom: $spacer*2;
+            @media (max-width: 992px) {
+              font-size: 24px;
+              text-decoration: underline;
+              margin-bottom: .5*$spacer;
+            }
           }
         }
 
